// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`report / createReport multiple sources 1`] = `
Object {
  "assets": Array [
    Object {
      "biggerIsBetter": false,
      "changed": true,
      "key": "main.css",
      "label": "main.css",
      "runs": Array [
        Object {
          "chunkId": "1",
          "delta": -1000,
          "deltaPercentage": -9.09090909,
          "deltaType": "POSITIVE",
          "displayDelta": "-1000B",
          "displayDeltaPercentage": "-9.09%",
          "displayValue": "9.77KB",
          "isChunk": true,
          "isEntry": true,
          "isInitial": true,
          "name": "main.a1b2c3d.css",
          "value": 10000,
        },
        Object {
          "chunkId": "1",
          "displayValue": "10.74KB",
          "isChunk": true,
          "isEntry": true,
          "isInitial": true,
          "name": "main.b1c2d3e.css",
          "value": 11000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": true,
      "key": "main.js",
      "label": "main.js",
      "runs": Array [
        Object {
          "chunkId": "1",
          "delta": 1000,
          "deltaPercentage": 2.04081633,
          "deltaType": "LOW_NEGATIVE",
          "displayDelta": "+1000B",
          "displayDeltaPercentage": "+2.04%",
          "displayValue": "48.83KB",
          "isChunk": true,
          "isEntry": true,
          "isInitial": true,
          "name": "main.a2b3c4d.js",
          "value": 50000,
        },
        Object {
          "chunkId": "1",
          "displayValue": "47.85KB",
          "isChunk": true,
          "isEntry": true,
          "isInitial": true,
          "name": "main.b2c3d4e.js",
          "value": 49000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "logo.png",
      "label": "logo.png",
      "runs": Array [
        Object {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "1000B",
          "isChunk": false,
          "isEntry": false,
          "isInitial": false,
          "name": "logo.a3b4c5d.png",
          "value": 1000,
        },
        Object {
          "displayValue": "1000B",
          "isChunk": false,
          "isEntry": false,
          "isInitial": false,
          "name": "logo.a3b4c5d.png",
          "value": 1000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "index.html",
      "label": "index.html",
      "runs": Array [
        Object {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "1.95KB",
          "isChunk": false,
          "isEntry": false,
          "isInitial": false,
          "name": "index.html",
          "value": 2000,
        },
        Object {
          "displayValue": "1.95KB",
          "isChunk": false,
          "isEntry": false,
          "isInitial": false,
          "name": "index.html",
          "value": 2000,
        },
      ],
    },
  ],
  "createdAt": "2019-01-10T00:00:00.000Z",
  "insights": Object {
    "webpack": Object {
      "assetsSizeTotal": Object {
        "data": Object {
          "info": Object {
            "delta": 0,
            "deltaPercentage": 0,
            "deltaType": "NO_CHANGE",
            "displayDelta": "0B",
            "displayDeltaPercentage": "0%",
            "displayValue": "61.52KB",
            "value": 63000,
          },
          "md": "*Bundle Size* — *61.52KB* (*0%*).",
          "text": "Bundle Size — 61.52KB (0%).",
        },
        "type": "INFO",
      },
      "duplicatePackages": Object {
        "data": Object {
          "package-c": Array [
            "package-a:package-c",
            "package-c",
          ],
        },
        "type": "WARNING",
      },
    },
  },
  "modules": Array [
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "module-a",
      "label": "module-a",
      "runs": Array [
        Object {
          "chunkIds": Array [
            "1",
          ],
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "1000B",
          "duplicated": false,
          "name": "module-a",
          "value": 1000,
        },
        Object {
          "chunkIds": Array [
            "1",
          ],
          "displayValue": "1000B",
          "duplicated": false,
          "name": "module-a",
          "value": 1000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": true,
      "key": "module-b",
      "label": "module-b",
      "runs": Array [
        Object {
          "chunkIds": Array [
            "1",
          ],
          "delta": 500,
          "deltaPercentage": 33.33333333,
          "deltaType": "NEGATIVE",
          "displayDelta": "+500B",
          "displayDeltaPercentage": "+33.33%",
          "displayValue": "1.95KB",
          "duplicated": false,
          "name": "module-b",
          "value": 2000,
        },
        Object {
          "chunkIds": Array [
            "1",
          ],
          "displayValue": "1.46KB",
          "duplicated": false,
          "name": "module-b",
          "value": 1500,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "node_modules/package-a/index.js",
      "label": "node_modules/package-a/index.js",
      "runs": Array [
        Object {
          "chunkIds": Array [
            "1",
          ],
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "1000B",
          "duplicated": false,
          "name": "node_modules/package-a/index.js",
          "value": 1000,
        },
        Object {
          "chunkIds": Array [
            "1",
          ],
          "displayValue": "1000B",
          "duplicated": false,
          "name": "node_modules/package-a/index.js",
          "value": 1000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": true,
      "key": "node_modules/package-a/node_modules/package-c/index.js",
      "label": "node_modules/package-a/node_modules/package-c/index.js",
      "runs": Array [
        Object {
          "chunkIds": Array [
            "1",
          ],
          "delta": 1000,
          "deltaPercentage": 100,
          "deltaType": "HIGH_NEGATIVE",
          "displayDelta": "+1000B",
          "displayDeltaPercentage": "+100%",
          "displayValue": "1000B",
          "duplicated": false,
          "name": "node_modules/package-a/node_modules/package-c/index.js",
          "value": 1000,
        },
        null,
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "node_modules/package-b/index.js",
      "label": "node_modules/package-b/index.js",
      "runs": Array [
        Object {
          "chunkIds": Array [
            "1",
          ],
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "1000B",
          "duplicated": false,
          "name": "node_modules/package-b/index.js",
          "value": 1000,
        },
        Object {
          "chunkIds": Array [
            "1",
          ],
          "displayValue": "1000B",
          "duplicated": false,
          "name": "node_modules/package-b/index.js",
          "value": 1000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "node_modules/package-c/index.js",
      "label": "node_modules/package-c/index.js",
      "runs": Array [
        Object {
          "chunkIds": Array [
            "1",
          ],
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "1000B",
          "duplicated": false,
          "name": "node_modules/package-c/index.js",
          "value": 1000,
        },
        Object {
          "chunkIds": Array [
            "1",
          ],
          "displayValue": "1000B",
          "duplicated": false,
          "name": "node_modules/package-c/index.js",
          "value": 1000,
        },
      ],
    },
  ],
  "packages": Array [
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "package-a",
      "label": "package-a",
      "runs": Array [
        Object {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "1000B",
          "name": "package-a",
          "path": "node_modules/package-a",
          "value": 1000,
        },
        Object {
          "displayValue": "1000B",
          "name": "package-a",
          "path": "node_modules/package-a",
          "value": 1000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": true,
      "key": "package-a:package-c",
      "label": "package-a:package-c",
      "runs": Array [
        Object {
          "delta": 1000,
          "deltaPercentage": 100,
          "deltaType": "HIGH_NEGATIVE",
          "displayDelta": "+1000B",
          "displayDeltaPercentage": "+100%",
          "displayValue": "1000B",
          "name": "package-c",
          "path": "node_modules/package-a/node_modules/package-c",
          "value": 1000,
        },
        null,
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "package-b",
      "label": "package-b",
      "runs": Array [
        Object {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "1000B",
          "name": "package-b",
          "path": "node_modules/package-b",
          "value": 1000,
        },
        Object {
          "displayValue": "1000B",
          "name": "package-b",
          "path": "node_modules/package-b",
          "value": 1000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "package-c",
      "label": "package-c",
      "runs": Array [
        Object {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "1000B",
          "name": "package-c",
          "path": "node_modules/package-c",
          "value": 1000,
        },
        Object {
          "displayValue": "1000B",
          "name": "package-c",
          "path": "node_modules/package-c",
          "value": 1000,
        },
      ],
    },
  ],
  "runs": Array [
    Object {
      "internalBuildNumber": 2,
      "webpack": Object {
        "builtAt": "2019-01-01T00:00:00.000Z",
        "chunks": Array [
          Object {
            "id": "1",
            "name": "main",
          },
        ],
        "hash": "abcd1234",
      },
    },
    Object {
      "internalBuildNumber": 1,
      "webpack": Object {
        "builtAt": "2019-01-01T00:00:00.000Z",
        "chunks": Array [
          Object {
            "id": "1",
            "name": "main",
          },
        ],
        "hash": "defg1234",
      },
    },
  ],
  "sizes": Array [
    Object {
      "biggerIsBetter": false,
      "changed": true,
      "key": "webpack.sizes.totalSizeByTypeJS",
      "label": "JS",
      "runs": Array [
        Object {
          "delta": 1000,
          "deltaPercentage": 2.04081633,
          "deltaType": "LOW_NEGATIVE",
          "displayDelta": "+1000B",
          "displayDeltaPercentage": "+2.04%",
          "displayValue": "48.83KB",
          "value": 50000,
        },
        Object {
          "displayValue": "47.85KB",
          "value": 49000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": true,
      "key": "webpack.sizes.totalSizeByTypeCSS",
      "label": "CSS",
      "runs": Array [
        Object {
          "delta": -1000,
          "deltaPercentage": -9.09090909,
          "deltaType": "POSITIVE",
          "displayDelta": "-1000B",
          "displayDeltaPercentage": "-9.09%",
          "displayValue": "9.77KB",
          "value": 10000,
        },
        Object {
          "displayValue": "10.74KB",
          "value": 11000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.sizes.totalSizeByTypeIMG",
      "label": "IMG",
      "runs": Array [
        Object {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "1000B",
          "value": 1000,
        },
        Object {
          "displayValue": "1000B",
          "value": 1000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.sizes.totalSizeByTypeMEDIA",
      "label": "Media",
      "runs": Array [
        Object {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "0B",
          "value": 0,
        },
        Object {
          "displayValue": "0B",
          "value": 0,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.sizes.totalSizeByTypeFONT",
      "label": "Fonts",
      "runs": Array [
        Object {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "0B",
          "value": 0,
        },
        Object {
          "displayValue": "0B",
          "value": 0,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.sizes.totalSizeByTypeHTML",
      "label": "HTML",
      "runs": Array [
        Object {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "1.95KB",
          "value": 2000,
        },
        Object {
          "displayValue": "1.95KB",
          "value": 2000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.sizes.totalSizeByTypeOTHER",
      "label": "Other",
      "runs": Array [
        Object {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "0B",
          "value": 0,
        },
        Object {
          "displayValue": "0B",
          "value": 0,
        },
      ],
    },
  ],
  "stats": Array [
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.totalSizeByTypeALL",
      "label": "Bundle Size",
      "runs": Array [
        Object {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0B",
          "displayDeltaPercentage": "0%",
          "displayValue": "61.52KB",
          "value": 63000,
        },
        Object {
          "displayValue": "61.52KB",
          "value": 63000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": true,
      "key": "webpack.totalInitialSizeJS",
      "label": "Initial JS",
      "runs": Array [
        Object {
          "delta": 1000,
          "deltaPercentage": 2.04081633,
          "deltaType": "LOW_NEGATIVE",
          "displayDelta": "+1000B",
          "displayDeltaPercentage": "+2.04%",
          "displayValue": "48.83KB",
          "value": 50000,
        },
        Object {
          "displayValue": "47.85KB",
          "value": 49000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": true,
      "key": "webpack.totalInitialSizeCSS",
      "label": "Initial CSS",
      "runs": Array [
        Object {
          "delta": -1000,
          "deltaPercentage": -9.09090909,
          "deltaType": "POSITIVE",
          "displayDelta": "-1000B",
          "displayDeltaPercentage": "-9.09%",
          "displayValue": "9.77KB",
          "value": 10000,
        },
        Object {
          "displayValue": "10.74KB",
          "value": 11000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": true,
      "key": "webpack.cacheInvalidation",
      "label": "Cache Invalidation",
      "runs": Array [
        Object {
          "delta": 95.24,
          "deltaPercentage": 100,
          "deltaType": "HIGH_NEGATIVE",
          "displayDelta": "+95.24%",
          "displayDeltaPercentage": "+100%",
          "displayValue": "95.24%",
          "value": 95.24,
        },
        Object {
          "displayValue": "0%",
          "value": 0,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": true,
      "key": "webpack.moduleCount",
      "label": "Modules",
      "runs": Array [
        Object {
          "delta": 1,
          "deltaPercentage": 20,
          "deltaType": "NEGATIVE",
          "displayDelta": "+1",
          "displayDeltaPercentage": "+20%",
          "displayValue": "6",
          "value": 6,
        },
        Object {
          "displayValue": "5",
          "value": 5,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.duplicateModulesCount",
      "label": "Duplicate Modules",
      "runs": Array [
        Object {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0",
          "displayDeltaPercentage": "0%",
          "displayValue": "0",
          "value": 0,
        },
        Object {
          "displayValue": "0",
          "value": 0,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.duplicateCode",
      "label": "Duplicate Code",
      "runs": Array [
        Object {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0%",
          "displayDeltaPercentage": "0%",
          "displayValue": "0%",
          "value": 0,
        },
        Object {
          "displayValue": "0%",
          "value": 0,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.chunkCount",
      "label": "Chunks",
      "runs": Array [
        Object {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0",
          "displayDeltaPercentage": "0%",
          "displayValue": "2",
          "value": 2,
        },
        Object {
          "displayValue": "2",
          "value": 2,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.assetCount",
      "label": "Assets",
      "runs": Array [
        Object {
          "delta": 0,
          "deltaPercentage": 0,
          "deltaType": "NO_CHANGE",
          "displayDelta": "0",
          "displayDeltaPercentage": "0%",
          "displayValue": "4",
          "value": 4,
        },
        Object {
          "displayValue": "4",
          "value": 4,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": true,
      "key": "webpack.packageCount",
      "label": "Packages",
      "runs": Array [
        Object {
          "delta": 1,
          "deltaPercentage": 33.33333333,
          "deltaType": "NEGATIVE",
          "displayDelta": "+1",
          "displayDeltaPercentage": "+33.33%",
          "displayValue": "4",
          "value": 4,
        },
        Object {
          "displayValue": "3",
          "value": 3,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": true,
      "key": "webpack.duplicatePackagesCount",
      "label": "Duplicate Packages",
      "runs": Array [
        Object {
          "delta": 1,
          "deltaPercentage": 100,
          "deltaType": "HIGH_NEGATIVE",
          "displayDelta": "+1",
          "displayDeltaPercentage": "+100%",
          "displayValue": "1",
          "value": 1,
        },
        Object {
          "displayValue": "0",
          "value": 0,
        },
      ],
    },
  ],
  "summary": Object {
    "webpack": Array [
      Object {
        "delta": 0,
        "deltaPercentage": 0,
        "deltaType": "NO_CHANGE",
        "displayDelta": "0B",
        "displayDeltaPercentage": "0%",
        "displayValue": "61.52KB",
        "label": "Bundle Size",
        "value": 63000,
      },
      Object {
        "delta": 1000,
        "deltaPercentage": 2.04081633,
        "deltaType": "LOW_NEGATIVE",
        "displayDelta": "+1000B",
        "displayDeltaPercentage": "+2.04%",
        "displayValue": "48.83KB",
        "label": "Initial JS",
        "value": 50000,
      },
      Object {
        "delta": -1000,
        "deltaPercentage": -9.09090909,
        "deltaType": "POSITIVE",
        "displayDelta": "-1000B",
        "displayDeltaPercentage": "-9.09%",
        "displayValue": "9.77KB",
        "label": "Initial CSS",
        "value": 10000,
      },
      Object {
        "delta": 95.24,
        "deltaPercentage": 100,
        "deltaType": "HIGH_NEGATIVE",
        "displayDelta": "+95.24%",
        "displayDeltaPercentage": "+100%",
        "displayValue": "95.24%",
        "label": "Cache Invalidation",
        "value": 95.24,
      },
      Object {
        "delta": 1,
        "deltaPercentage": 20,
        "deltaType": "NEGATIVE",
        "displayDelta": "+1",
        "displayDeltaPercentage": "+20%",
        "displayValue": "6",
        "label": "Modules",
        "value": 6,
      },
      Object {
        "delta": 0,
        "deltaPercentage": 0,
        "deltaType": "NO_CHANGE",
        "displayDelta": "0",
        "displayDeltaPercentage": "0%",
        "displayValue": "0",
        "label": "Duplicate Modules",
        "value": 0,
      },
      Object {
        "delta": 0,
        "deltaPercentage": 0,
        "deltaType": "NO_CHANGE",
        "displayDelta": "0%",
        "displayDeltaPercentage": "0%",
        "displayValue": "0%",
        "label": "Duplicate Code",
        "value": 0,
      },
      Object {
        "delta": 0,
        "deltaPercentage": 0,
        "deltaType": "NO_CHANGE",
        "displayDelta": "0",
        "displayDeltaPercentage": "0%",
        "displayValue": "2",
        "label": "Chunks",
        "value": 2,
      },
      Object {
        "delta": 0,
        "deltaPercentage": 0,
        "deltaType": "NO_CHANGE",
        "displayDelta": "0",
        "displayDeltaPercentage": "0%",
        "displayValue": "4",
        "label": "Assets",
        "value": 4,
      },
      Object {
        "delta": 1,
        "deltaPercentage": 33.33333333,
        "deltaType": "NEGATIVE",
        "displayDelta": "+1",
        "displayDeltaPercentage": "+33.33%",
        "displayValue": "4",
        "label": "Packages",
        "value": 4,
      },
      Object {
        "delta": 1,
        "deltaPercentage": 100,
        "deltaType": "HIGH_NEGATIVE",
        "displayDelta": "+1",
        "displayDeltaPercentage": "+100%",
        "displayValue": "1",
        "label": "Duplicate Packages",
        "value": 1,
      },
    ],
  },
}
`;

exports[`report / createReport single source 1`] = `
Object {
  "assets": Array [
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "main.css",
      "label": "main.css",
      "runs": Array [
        Object {
          "chunkId": "1",
          "displayValue": "9.77KB",
          "isChunk": true,
          "isEntry": true,
          "isInitial": true,
          "name": "main.a1b2c3d.css",
          "value": 10000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "main.js",
      "label": "main.js",
      "runs": Array [
        Object {
          "chunkId": "1",
          "displayValue": "48.83KB",
          "isChunk": true,
          "isEntry": true,
          "isInitial": true,
          "name": "main.a2b3c4d.js",
          "value": 50000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "logo.png",
      "label": "logo.png",
      "runs": Array [
        Object {
          "displayValue": "1000B",
          "isChunk": false,
          "isEntry": false,
          "isInitial": false,
          "name": "logo.a3b4c5d.png",
          "value": 1000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "index.html",
      "label": "index.html",
      "runs": Array [
        Object {
          "displayValue": "1.95KB",
          "isChunk": false,
          "isEntry": false,
          "isInitial": false,
          "name": "index.html",
          "value": 2000,
        },
      ],
    },
  ],
  "createdAt": "2019-01-10T00:00:00.000Z",
  "insights": Object {
    "webpack": Object {
      "assetsSizeTotal": Object {
        "data": Object {
          "info": Object {
            "delta": 63000,
            "deltaPercentage": 100,
            "deltaType": "HIGH_NEGATIVE",
            "displayDelta": "+61.52KB",
            "displayDeltaPercentage": "+100%",
            "displayValue": "61.52KB",
            "value": 63000,
          },
          "md": "*Bundle Size* — *61.52KB* (*+100%*).",
          "text": "Bundle Size — 61.52KB (+100%).",
        },
        "type": "INFO",
      },
      "duplicatePackages": Object {
        "data": Object {
          "package-c": Array [
            "package-a:package-c",
            "package-c",
          ],
        },
        "type": "WARNING",
      },
    },
  },
  "modules": Array [
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "module-a",
      "label": "module-a",
      "runs": Array [
        Object {
          "chunkIds": Array [
            "1",
          ],
          "displayValue": "1000B",
          "duplicated": false,
          "name": "module-a",
          "value": 1000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "module-b",
      "label": "module-b",
      "runs": Array [
        Object {
          "chunkIds": Array [
            "1",
          ],
          "displayValue": "1.95KB",
          "duplicated": false,
          "name": "module-b",
          "value": 2000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "node_modules/package-a/index.js",
      "label": "node_modules/package-a/index.js",
      "runs": Array [
        Object {
          "chunkIds": Array [
            "1",
          ],
          "displayValue": "1000B",
          "duplicated": false,
          "name": "node_modules/package-a/index.js",
          "value": 1000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "node_modules/package-a/node_modules/package-c/index.js",
      "label": "node_modules/package-a/node_modules/package-c/index.js",
      "runs": Array [
        Object {
          "chunkIds": Array [
            "1",
          ],
          "displayValue": "1000B",
          "duplicated": false,
          "name": "node_modules/package-a/node_modules/package-c/index.js",
          "value": 1000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "node_modules/package-b/index.js",
      "label": "node_modules/package-b/index.js",
      "runs": Array [
        Object {
          "chunkIds": Array [
            "1",
          ],
          "displayValue": "1000B",
          "duplicated": false,
          "name": "node_modules/package-b/index.js",
          "value": 1000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "node_modules/package-c/index.js",
      "label": "node_modules/package-c/index.js",
      "runs": Array [
        Object {
          "chunkIds": Array [
            "1",
          ],
          "displayValue": "1000B",
          "duplicated": false,
          "name": "node_modules/package-c/index.js",
          "value": 1000,
        },
      ],
    },
  ],
  "packages": Array [
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "package-a",
      "label": "package-a",
      "runs": Array [
        Object {
          "displayValue": "1000B",
          "name": "package-a",
          "path": "node_modules/package-a",
          "value": 1000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "package-a:package-c",
      "label": "package-a:package-c",
      "runs": Array [
        Object {
          "displayValue": "1000B",
          "name": "package-c",
          "path": "node_modules/package-a/node_modules/package-c",
          "value": 1000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "package-b",
      "label": "package-b",
      "runs": Array [
        Object {
          "displayValue": "1000B",
          "name": "package-b",
          "path": "node_modules/package-b",
          "value": 1000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "package-c",
      "label": "package-c",
      "runs": Array [
        Object {
          "displayValue": "1000B",
          "name": "package-c",
          "path": "node_modules/package-c",
          "value": 1000,
        },
      ],
    },
  ],
  "runs": Array [
    Object {
      "internalBuildNumber": 1,
      "webpack": Object {
        "builtAt": "2019-01-01T00:00:00.000Z",
        "chunks": Array [
          Object {
            "id": "1",
            "name": "main",
          },
        ],
        "hash": "abcd1234",
      },
    },
  ],
  "sizes": Array [
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.sizes.totalSizeByTypeJS",
      "label": "JS",
      "runs": Array [
        Object {
          "displayValue": "48.83KB",
          "value": 50000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.sizes.totalSizeByTypeCSS",
      "label": "CSS",
      "runs": Array [
        Object {
          "displayValue": "9.77KB",
          "value": 10000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.sizes.totalSizeByTypeIMG",
      "label": "IMG",
      "runs": Array [
        Object {
          "displayValue": "1000B",
          "value": 1000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.sizes.totalSizeByTypeMEDIA",
      "label": "Media",
      "runs": Array [
        Object {
          "displayValue": "0B",
          "value": 0,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.sizes.totalSizeByTypeFONT",
      "label": "Fonts",
      "runs": Array [
        Object {
          "displayValue": "0B",
          "value": 0,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.sizes.totalSizeByTypeHTML",
      "label": "HTML",
      "runs": Array [
        Object {
          "displayValue": "1.95KB",
          "value": 2000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.sizes.totalSizeByTypeOTHER",
      "label": "Other",
      "runs": Array [
        Object {
          "displayValue": "0B",
          "value": 0,
        },
      ],
    },
  ],
  "stats": Array [
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.totalSizeByTypeALL",
      "label": "Bundle Size",
      "runs": Array [
        Object {
          "displayValue": "61.52KB",
          "value": 63000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.totalInitialSizeJS",
      "label": "Initial JS",
      "runs": Array [
        Object {
          "displayValue": "48.83KB",
          "value": 50000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.totalInitialSizeCSS",
      "label": "Initial CSS",
      "runs": Array [
        Object {
          "displayValue": "9.77KB",
          "value": 10000,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.cacheInvalidation",
      "label": "Cache Invalidation",
      "runs": Array [
        Object {
          "displayValue": "0%",
          "value": 0,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.moduleCount",
      "label": "Modules",
      "runs": Array [
        Object {
          "displayValue": "6",
          "value": 6,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.duplicateModulesCount",
      "label": "Duplicate Modules",
      "runs": Array [
        Object {
          "displayValue": "0",
          "value": 0,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.duplicateCode",
      "label": "Duplicate Code",
      "runs": Array [
        Object {
          "displayValue": "0%",
          "value": 0,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.chunkCount",
      "label": "Chunks",
      "runs": Array [
        Object {
          "displayValue": "2",
          "value": 2,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.assetCount",
      "label": "Assets",
      "runs": Array [
        Object {
          "displayValue": "4",
          "value": 4,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.packageCount",
      "label": "Packages",
      "runs": Array [
        Object {
          "displayValue": "4",
          "value": 4,
        },
      ],
    },
    Object {
      "biggerIsBetter": false,
      "changed": false,
      "key": "webpack.duplicatePackagesCount",
      "label": "Duplicate Packages",
      "runs": Array [
        Object {
          "displayValue": "1",
          "value": 1,
        },
      ],
    },
  ],
  "summary": Object {
    "webpack": Array [
      Object {
        "delta": 63000,
        "deltaPercentage": 100,
        "deltaType": "HIGH_NEGATIVE",
        "displayDelta": "+61.52KB",
        "displayDeltaPercentage": "+100%",
        "displayValue": "61.52KB",
        "label": "Bundle Size",
        "value": 63000,
      },
      Object {
        "delta": 50000,
        "deltaPercentage": 100,
        "deltaType": "HIGH_NEGATIVE",
        "displayDelta": "+48.83KB",
        "displayDeltaPercentage": "+100%",
        "displayValue": "48.83KB",
        "label": "Initial JS",
        "value": 50000,
      },
      Object {
        "delta": 10000,
        "deltaPercentage": 100,
        "deltaType": "HIGH_NEGATIVE",
        "displayDelta": "+9.77KB",
        "displayDeltaPercentage": "+100%",
        "displayValue": "9.77KB",
        "label": "Initial CSS",
        "value": 10000,
      },
      Object {
        "delta": 0,
        "deltaPercentage": 0,
        "deltaType": "NO_CHANGE",
        "displayDelta": "0%",
        "displayDeltaPercentage": "0%",
        "displayValue": "0%",
        "label": "Cache Invalidation",
        "value": 0,
      },
      Object {
        "delta": 6,
        "deltaPercentage": 100,
        "deltaType": "HIGH_NEGATIVE",
        "displayDelta": "+6",
        "displayDeltaPercentage": "+100%",
        "displayValue": "6",
        "label": "Modules",
        "value": 6,
      },
      Object {
        "delta": 0,
        "deltaPercentage": 0,
        "deltaType": "NO_CHANGE",
        "displayDelta": "0",
        "displayDeltaPercentage": "0%",
        "displayValue": "0",
        "label": "Duplicate Modules",
        "value": 0,
      },
      Object {
        "delta": 0,
        "deltaPercentage": 0,
        "deltaType": "NO_CHANGE",
        "displayDelta": "0%",
        "displayDeltaPercentage": "0%",
        "displayValue": "0%",
        "label": "Duplicate Code",
        "value": 0,
      },
      Object {
        "delta": 2,
        "deltaPercentage": 100,
        "deltaType": "HIGH_NEGATIVE",
        "displayDelta": "+2",
        "displayDeltaPercentage": "+100%",
        "displayValue": "2",
        "label": "Chunks",
        "value": 2,
      },
      Object {
        "delta": 4,
        "deltaPercentage": 100,
        "deltaType": "HIGH_NEGATIVE",
        "displayDelta": "+4",
        "displayDeltaPercentage": "+100%",
        "displayValue": "4",
        "label": "Assets",
        "value": 4,
      },
      Object {
        "delta": 4,
        "deltaPercentage": 100,
        "deltaType": "HIGH_NEGATIVE",
        "displayDelta": "+4",
        "displayDeltaPercentage": "+100%",
        "displayValue": "4",
        "label": "Packages",
        "value": 4,
      },
      Object {
        "delta": 1,
        "deltaPercentage": 100,
        "deltaType": "HIGH_NEGATIVE",
        "displayDelta": "+1",
        "displayDeltaPercentage": "+100%",
        "displayValue": "1",
        "label": "Duplicate Packages",
        "value": 1,
      },
    ],
  },
}
`;
